--- a/src/pages/SignUp/index.css
+++ b/src/pages/SignUp/index.css
@@ -1,13 +1,13 @@
 .signup-wrapper {
-  margin-top: 10rem;
+  margin: 10rem var(--space-2) 2rem var(--space-2);
   padding-bottom: 2rem;
   padding-top: 2rem;
-  /* display: flex;
-    justify-content: center;
-    align-items: center; */
+  font-size: var(--font-length-sm3);
   background-color: var(--secondary-color);
   color: var(--primary-color);
   border: 2px solid var(--color-font-text);
+  border-radius: 5px;
+  box-shadow: 2px 4px 4px var(--color-shadow);
 }
 
 .signup-form {
@@ -26,6 +26,7 @@
 }
 
 .signup-form-item-buttons {
+  margin-top: var(--space-2);
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -35,14 +36,13 @@
   border: none;
   padding: var(--space-1);
   border-radius: 5px;
-  box-shadow: 1px 2px 2px hsl(36, 48%, 31%), 2px 3px 3px hsl(36, 48%, 31%),
-    2px 4px 4px hsl(36, 48%, 31%);
+  box-shadow: 1px 2px 2px hsl(36, 48%, 31%);
 }
 
 @media screen and (min-width: 768px) {
   .signup-wrapper {
     font-size: var(--font-length-sm3);
-    width: 40vw;
+    width: 25vw;
     margin-left: auto;
     margin-right: auto;
   }
