--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
   --color-font-disabled: hsl(162, 22%, 78%);
   --color-button-background: hsl(36, 93%, 68%);
   --color-button-text: hsl(178, 100%, 6%);
-  --color-shadow: hsl(177, 63%, 12%);
+  --color-shadow: hsl(177, 31%, 35%);
   --space-1: 0.5rem;
   --space-2: 1rem;
   --space-3: 1.5rem;
